# snek

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Apple.hpp  Common.hpp  Config.hpp  Configs.hpp  Game.hpp  Snake.hpp
source/: Apple.cpp  Common.cpp  Game.cpp  Snake.cpp  main.cpp
